--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,11 @@ services:
   redis:
     image: redis
     container_name: spectrum-redis
+    volumes:
+      - redis:/data
     ports:
       - "6379:6379"
 
 volumes:
     rethinkdb:
+    redis:
